use BigInteger and BigDecimal
AM can produce very large integers, and thus the XS version uses custom
128-bit decimal numbers. Replace ints and doubles with `BigInteger`s
and `BigDecimal`s. Store the `MathContext` required for division in
`AMUtils` and document the 10-decimal-place precision. Update tests as
needed to maintain passing state.